<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomActivity">

    <com.voxeet.sdk.views.VideoView
        android:id="@+id/video_other"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        />
    <!-- come back to this and fiddle with the height/width -->
    <com.voxeet.sdk.views.VideoView
        android:id="@+id/video_self"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_min="215dp"
        app:layout_constraintWidth_min="150dp"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient"
        />

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/confName"
        android:background="@drawable/shadow"/>

    <TextView
        android:id="@+id/confName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/participants"
        app:layout_constraintStart_toStartOf="@id/participants"
        tools:text="Conference Name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:paddingTop="20dp"
        />

    <TextView
        android:id="@+id/participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/hang_up"
        tools:text="Participant, Other"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/hang_up"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_call_end_24"
        android:contentDescription="@string/hang_up_button_accs"
        android:backgroundTint="@color/dolby_red"
        android:layout_margin="20dp"
        app:borderWidth="0dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mute_audio"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:fabCustomSize="50dp"
        app:layout_constraintTop_toTopOf="@id/hang_up"
        app:layout_constraintBottom_toBottomOf="@id/hang_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/hang_up"
        android:src="@drawable/ic_baseline_mic_24"
        android:contentDescription="@string/mute_audio_button_accs"
        android:backgroundTint="@color/white"
        app:tint="@null"
        app:borderWidth="0dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mute_video"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:fabCustomSize="50dp"
        app:layout_constraintTop_toTopOf="@id/hang_up"
        app:layout_constraintBottom_toBottomOf="@id/hang_up"
        app:layout_constraintStart_toStartOf="@id/hang_up"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_videocam_24"
        android:contentDescription="@string/mute_video_button_accs"
        android:backgroundTint="@color/white"
        app:tint="@null"
        app:borderWidth="0dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>