<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_src_assets_dolby_io_logo"
        android:backgroundTint="@color/black"
        android:layout_marginTop="100dp"
        />

    <ImageView
        android:id="@+id/blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="40dp"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="30dp"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/practice_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/name"
                android:text="@string/let_s_practice_prompt"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/name"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:importantForAutofill="no"
                android:hint="@string/name_prompt"
                android:inputType="textCapWords"
                android:background="@drawable/oval_background"
                app:layout_constraintTop_toBottomOf="@id/practice_text"
                />

            <ProgressBar
                android:id="@+id/loadSession"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintBottom_toTopOf="@id/role"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/progressBar"
                android:background="@drawable/loader_background"
                />

            <Spinner
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/spinner_background"
                app:layout_constraintTop_toBottomOf="@id/name"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/role"
                android:layout_marginHorizontal="90dp"
                android:layout_marginTop="30dp"
                android:text="@string/go_button"
                android:textColor="@color/dolby_dark_gray"
                android:textStyle="bold"
                android:textSize="18sp"
                app:backgroundTint="@color/dolby_light_gray"
                app:cornerRadius="50dp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>